force-app/main/default/objects/ApartmentReservation__c/ApartmentReservation__c.object-meta.xml
<CustomObject>
    <label>Apartment Reservation</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Apartment Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apartment Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>