force-app/main/default/objects/ApartmentReservation__c/fields/Apartment__c.field-meta.xml
<CustomField>
    <fullName>Apartment__c</fullName>
    <label>Apartment</label>
    <referenceTo>Apartment__c</referenceTo>
    <relationshipName>Apartment_Rentals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>