force-app/main/default/objects/ApartmentReservation__c/fields/ApartmentRoom__c.field-meta.xml
<CustomField>
    <fullName>ApartmentRoom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apartment Room</label>
    <referenceTo>ApartmentRoom__c</referenceTo>
    <relationshipLabel>Apartment Reservations</relationshipLabel>
    <relationshipName>Apartment_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>