force-app/main/default/objects/ApartmentReservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apartment__c</columns>
    <columns>DateFrom__c</columns>
    <columns>DateTo__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Price__c</columns>
    <columns>ApartmentRoom__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>