force-app/main/default/objects/ApartmentReservation__c/listViews/My_Reservations.listView-meta.xml
<ListView>
    <fullName>My_Reservations</fullName>
    <columns>NAME</columns>
    <columns>Apartment__c</columns>
    <columns>ApartmentRoom__c</columns>
    <columns>DateFrom__c</columns>
    <columns>DateTo__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_By_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Reservations</label>
</ListView>